# desafio_eleflow

./: .gitignore  README.md  pyproject.toml
databricks/src/00.setup/: create_files.py
databricks/src/01.raw/: config.json  ingestion.py  setup.py
databricks/src/02.bronze/: config.json  ingestion.py  setup.py
databricks/src/03.silver/: air_cia.sql  icaos.sql  vra.sql
databricks/src/04.gold/: fav_aeroporto_cia_area.sql  fav_rota_cia_area.sql
databricks/src/databases/: create.sql.py
local/src/01.raw/: config.json  ingestion.ipynb
local/src/02.bronze/: config.json  ingestion.ipynb
local/src/03.silver/: config.json  ingestion.ipynb
local/src/04.gold/: fav_aero_cia_area.sql  fav_aero_cia_area_union.sql  fav_rota_cia_area.sql
